<resources>
    <string name="app_name">BubblePin</string>

    <!--TODO: remember to delete it when release the APP-->
    <!--<string name="test_email">test@bubblepin.com</string>-->
    <!--<string name="test_password">yuanjie</string>-->

    <string name="test_email">bubblepin.dev@gmail.com</string>
    <string name="test_password">yuanjie2015</string>

    <!-- Activity -->
    <string name="title_activity_signup_acitivity">Sign Up</string>
    <string name="title_activity_test_image">TestImageActivity</string>
    <string name="title_activity_test_google_map">TestGoogleMapActivity</string>
    <string name="title_activity_contact">contactActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_memory_detail">MemoryDetailActivity</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login and signup-->
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_name">NAME</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="have_no_account">Don\'t have an account yet?</string>
    <string name="logout">LogOut</string>
    <string name="forget_password">Forget Password?</string>
    <string name="enter_email_address">Enter Your Email Address</string>
    <string name="email_not_exist">Error: mail not exist in server</string>

    <!-- Error handle -->
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_short_password">This password is too short</string>
    <string name="error_password">the password should begin with letter,
        can only contain digit, letter and underline, with the length [6, 16]</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="main_description">Connect Memories to the Landscape</string>
    <string name="error_exist_email">Email has already exists in system.</string>
    <string name="error_exist_username">Username has already exists in system.</string>

    <string name="login">LOG IN</string>
    <string name="loginTitle">Login</string>
    <string name="take_the_tour">TAKE THE TOUR</string>
    <string name="sign_up">SIGN UP</string>

    <!-- Parse Initial parameter -->
    <string name="parse_applicationId">996kBxgeelo7iRwKWB2WECQyp20hDQ5O2L9ADJUx</string>
    <string name="parse_clientId">FxBd4hmp8NqI4wWvJ75DTsBETKy2uoTgk2tkgFgn</string>

    <!-- Test Image parameter -->
    <string name="testImage_captureImage">Capture Image</string>
    <string name="testImage_uploadImage">Upload Image</string>
    <string name="testImage_saveImage">Save Image</string>
    <string name="testImage_uploadTitle">Please Select Image</string>
    <string name="testImage_viewMemory2D">View Memories 2D</string>
    <string name="testImage_viewMemory3D">View Memories 3D</string>
    <string name="testImage_inputIntroduction">First Input your introduction, then select or upload image.</string>

    <!-- Test Map parameter -->
    <string name="testMap_return">Return</string>
    <string name="title_activity_metaio_sdklocation_base_armodule">MetaioSDKLocationBaseARModule</string>
    <string name="title_activity_main_google_map">BubblePin</string>

    <!-- Main GoogleMap Activity-->
    <string name="filter">FILTER</string>
    <string name="contact">CONTACT</string>
    <string name="title_activity_add_memory">AddMemory</string>

    <string name="title_activity_choose_media">Choose Media</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Add media Activity-->
    <string name="add_date">Add Date</string>
    <string name="add_media_delete">Delete</string>
    <string name="user_privacy">All Friends</string>
    <string name="add_media">Add Media</string>
    <string name="memory_title">Memory Title</string>
    <string name="memory_description">Memory Description</string>
    <string name="privacy_private">Only me</string>
    <string name="privacy_friend">All Friends</string>

    <!-- Choose Media -->
    <string name="choose_media_title">Connect Memories to the Landscape!</string>


    <!-- Memory Detail -->
    <string name="memory">Memory</string>
    <string name="initial_test">0</string>
    <string name="memory_detail_name">NAME</string>
    <string name="memory_detail_type">PHOTO</string>
    <string name="memory_detail_date">04/10/2O15</string>
    <string name="memory_detail_title">TITLE</string>
    <string name="memory_detail_address">This is the address</string>
    <string name="memory_detail_delete">Delete</string>
    <string name="no_media_Description">No Media</string>
    <string name="memory_detail_edit">Edit</string>

    <!-- Contact Module -->
    <string name="add_contact">ADD CONTACT</string>
    <string name="add_contact_username">Firstname Lastname</string>
    <string name="add_contact_city">New York, US</string>
    <string name="add_contact_search">Search for the username</string>
    <string name="add_contact_add">Add</string>
    <string name="contact_number">Total 10 Friends</string>
    <string name="loading_friends_list">Loading Friends List&#8230;</string>
    <string name="contact_no_friends">What a pity, You have no Friends now! Click the ADD button on the right of the sidebar</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="profile_username">Username</string>
    <string name="profile_location">location</string>
    <string name="profile_total_memory">Total Memories</string>
    <string name="profile_recent_added">Recent Added</string>
    <string name="profile_contact">Contacts</string>
    <string name="zero">0</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_city">City</string>
    <string name="profile_country">Country</string>

    <!-- Filter -->
    <string name="filter_title">Filter</string>
    <string name="filter_category_name">Category</string>
    <string name="filter_contact_name">Contact</string>
    <string name="filter_no_category">Current, you have no set up category, you can click the Add Category Button above to add a new category</string>
    <string name="filter_no_contact">Current, you have no contact in this category, you can click the Add Contact Button above to add a new contact into this category list</string>
    <string name="filter_add_contact">Add Contact</string>
    <string name="filter_add_category_hint">new category name</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_google_map_activity_with_fragment">GoogleMapActivityWithFragment
    </string>
    <string name="title_activity_filter_detail">FilterDetailActivity</string>

    <!-- Dialog -->
    <string name="filter_remove_item">Do you want to delete this category? You can not undo this operation</string>
    <string name="filter_delete_category">Delete Category</string>
    <string name="filter_delete_user_message">Do you want to delete this User from the category? You can not undo this operation</string>
    <string name="filter_delete_user_title">Delete User</string>
    <string name="filter_select_one_friend">Select One Friend</string>
    <string name="filter_new_category">New Category</string>
    <string name="filter_duplicate_category_name">Duplicate Category Name, please enter another name!</string>
    <string name="filter_create_category_success">category success!</string>
    <string name="filter_get_category_error">get category error: </string>
    <string name="login_not_match">"The email or password is not match, please try again!"</string>
    <string name="delete_memory">Delete the Memory, you cannot redo this operation</string>
    <string name="choose_privacy_status">Choose Privacy Status</string>
    <string name="upload_text_success">Upload text memory success!</string>
    <string name="upload_image_success">Upload image memory success!</string>
    <string name="upload_memory">Upload Memory</string>
    <string name="upload">Upload</string>
    <string name="delete_friend_title">Delete Friend</string>
    <string name="delete_friend_message">Do you want to delete this friend? You can not undo this operation</string>
    <string name="logout_message">Do you want to logout of this application?</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="try_again">Try Again</string>
    <string name="ok">OK</string>
    <string name="download">Downloading </string>
    <string name="uploading">Uploading </string>
    <string name="success">Success</string>
    <string name="send_email_success_message">Send Email Success! Please check your email</string>

    <!-- Toast -->
    <string name="friend_exist_in_category">user exists in this category</string>
    <string name="get_image_success">Get Image Success!</string>
    <string name="title_activity_forget_password">Forget Password</string>

</resources>
