<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bubblepin.com.bubblepin.loginModule.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_title"
        android:background="@drawable/logo"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/email_login_form_loginActivity"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email_loginActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="100dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/test_email" />

            <EditText
                android:id="@+id/password_loginActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/test_password" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:id="@+id/loginButton_loginActivity"
                android:background="@drawable/login_button"
                android:layout_marginTop="20dp"
                android:clickable="true" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_no_account"
            android:layout_marginBottom="10dp"
            android:textColor="@color/powderblue"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/signUpButton_loginActivity"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:background="@drawable/sign_up_button"
            android:layout_marginBottom="20dp"
            android:clickable="true" />

    </LinearLayout>

</RelativeLayout>



