<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bubblepin.com.bubblepin.profileModule.ProfileActivity">

    <RelativeLayout
        android:id="@+id/profile_top_layout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/profile_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <bubblepin.com.bubblepin.util.RoundImageView
                android:id="@+id/profile_user_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/user_photo_intial" />

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:text="@string/profile_username"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/slidebar_location_pin" />

                <TextView
                    android:id="@+id/profile_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/white"
                    android:text="@string/profile_location" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/profile_summary_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/profile_top_layout"
        android:background="@drawable/profile_memory_background">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/profile_total_memory" />

                <TextView
                    android:id="@+id/profile_total_memory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:text="@string/zero" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/profile_recent_added" />

                <TextView
                    android:id="@+id/profile_recent_added"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:text="@string/zero" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/profile_contact" />

                <TextView
                    android:id="@+id/profile_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:text="@string/zero" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_below="@id/profile_summary_layout"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/profile_add_contact"
        android:layout_below="@id/profile_summary_layout"
        android:layout_marginTop="8dp"
        android:layout_width="160dp"
        android:clickable="true"
        android:visibility="gone"
        android:src="@drawable/profile_add_contact"
        android:layout_height="60dp" />

</RelativeLayout>
